# freeinmonads

./: .gitignore  LICENSE  README.md  freeinmonads.cabal  package.yaml  shell.nix
src/: .dir-locals.el  Common.hs  Free.hs  Program.hs  Types.hs
src/Core/: Common.hs  Types.hs
src/Module/: Api.hs  Console.hs  Database.hs
src/Program/: Cat.hs  Dog.hs  Dude.hs  Instances.hs  Types.hs
test/: Spec.hs
