name:           freeinmonads
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/hussein-aitlahcen/freeinmonads#readme>
homepage:       https://github.com/hussein-aitlahcen/freeinmonads#readme
bug-reports:    https://github.com/hussein-aitlahcen/freeinmonads/issues
author:         Hussein Ait Lahcen
maintainer:     hussein.aitlahcen@gmail.com
copyright:      2018 Hussein Ait Lahcen
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/hussein-aitlahcen/freeinmonads

library
  exposed-modules:
      Core.Common
      Core.Types
      Module.Api
      Module.Console
      Module.Database
      Program.Cat
      Program.Dog
      Program.Dude
  other-modules:
      Paths_freeinmonads
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , free
    , hspec
    , mtl
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Werror

test-suite freeinmonads-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_freeinmonads
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , free
    , freeinmonads
    , hspec
    , mtl
  default-language: Haskell2010
